--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10944,3 +10944,202 @@ a.text-dark:focus {
   }
 }
 
+body {
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+}
+
+html {
+  height: -webkit-fill-available;
+}
+
+main {
+  display: flex;
+  flex-wrap: nowrap;
+  height: 100vh;
+  height: -webkit-fill-available;
+  max-height: 100vh;
+  overflow-x: auto;
+  overflow-y: hidden;
+}
+
+.dropdown-toggle {
+  outline: 0;
+}
+
+.nav-flush .nav-link {
+  border-radius: 0;
+}
+
+.btn-toggle {
+  display: inline-flex;
+  align-items: center;
+  padding: 0.25rem 0.5rem;
+  font-weight: 600;
+  color: rgba(0, 0, 0, 0.65);
+  background-color: transparent;
+  border: 0;
+}
+
+.btn-toggle:hover,
+.btn-toggle:focus {
+  color: rgba(0, 0, 0, 0.85);
+  background-color: #d2f4ea;
+}
+
+.btn-toggle::before {
+  width: 1.25em;
+  line-height: 0;
+  content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%280,0,0,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
+  transition: transform 0.35s ease;
+  transform-origin: 0.5em 50%;
+}
+
+.btn-toggle[aria-expanded=true] {
+  color: rgba(0, 0, 0, 0.85);
+}
+
+.btn-toggle[aria-expanded=true]::before {
+  transform: rotate(90deg);
+}
+
+.btn-toggle-nav a {
+  display: inline-flex;
+  padding: 0.1875rem 0.5rem;
+  margin-top: 0.125rem;
+  margin-left: 1.25rem;
+  text-decoration: none;
+}
+
+.btn-toggle-nav a:hover,
+.btn-toggle-nav a:focus {
+  background-color: #d2f4ea;
+}
+
+.scrollarea {
+  overflow-y: auto;
+}
+
+.fw-semibold {
+  font-weight: 600;
+}
+
+.lh-tight {
+  line-height: 1.25;
+}
+
+.mesax {
+  margin-right: 50%;
+}
+
+.card {
+  height: 100% !important;
+}
+
+.contain-main-link {
+  display: flex;
+  flex-direction: row;
+  align-items: end;
+  justify-content: space-around;
+  height: inherit;
+  padding-bottom: 7%;
+}
+
+.doggy-black-show {
+  background-image: url(/images/doggy_black_1420.jpg?d9378a184d963bd859ad1d4f98b4f81b);
+  width: 1420px;
+  height: 350px;
+  margin-top: 5%;
+}
+
+.content-home-show {
+  padding-top: 30px;
+  padding-left: 144px;
+  text-align: center;
+}
+
+.show-all-product {
+  text-align: center;
+  margin-bottom: 5%;
+}
+
+.form-control-width {
+  width: 84% !important;
+  margin-right: 3%;
+}
+
+.link-style-header {
+  color: #777777;
+  font-size: x-large;
+}
+
+.link-style-header:hover {
+  color: black;
+  text-decoration: none;
+}
+
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  border: 0;
+  outline: none;
+  padding: 0;
+  border-radius: 100px;
+}
+
+#myBtn:hover {
+  border: 0;
+}
+
+.card-carousel:hover {
+  transform: scale(1.01, 1.01);
+  z-index: 99;
+}
+
+.product-card-show:hover {
+  transform: scale(1.05, 1.05);
+  z-index: 99;
+}
+
+.user-link {
+  font-size: large;
+}
+
+.btn-group-padding form:first-child {
+  padding-right: 10px;
+  padding-left: 5px;
+}
+
+.card-body-style {
+  color: black;
+}
+
+/*loader*/
+
+/*#loading {*/
+
+/*    position: fixed;*/
+
+/*    width: 100%;*/
+
+/*    height: 100%;*/
+
+/*    background: #ffffff;*/
+
+/*    z-index: 9999;*/
+
+/*}*/
+
+/*#img-loading {*/
+
+/*    display: block;*/
+
+/*    margin: 0 auto;*/
+
+/*    background-repeat: no-repeat;*/
+
+/*}*/
+
