Refactor code and you have 1 problem with images

--- a/public/css/custom/main.css
+++ b/public/css/custom/main.css
@@ -96,7 +96,7 @@ main {
 }
 
 .doggy-black-show {
-    background-image: url("../../images/doggy_black_1420.jpg");
+    background-image: url("../../../resources/assets/images/doggy_black_1420.jpg");
     width: 1420px;
     height: 350px;
     margin-top: 5%;
