--- a/resources/assets/sass/global/main.scss
+++ b/resources/assets/sass/global/main.scss
@@ -97,6 +97,7 @@ main {
 
 .doggy-black-show {
     background-image: url("../../images/doggy_black_1420.jpg");
+    //background-image: url("{{ asset(../../images/doggy_black_1420.jpg) }}");
     width: 1420px;
     height: 350px;
     margin-top: 5%;
